--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,8 @@
         <ul>
             <!-- CORRECTED: Navigation links now use relative_url to point to the right place -->
             <li><a href="{{ "/" | relative_url }}">Home</a></li>
+            <li><a href="https://my.uea.ac.uk/divisions/library-and-learning-enhancement/learning-enhancement" target="_blank">LET information</a></li>
+            <li><a href="https://my.uea.ac.uk/divisions/library-and-learning-enhancement/learning-enhancement/resources/maths-and-statistics" target="_blank">LET Mathematics</a></li>
         </ul>
     </nav>
     
