--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,8 +128,8 @@ main {
 }
 
 .explanation {
-    background-color: #fff8e1;
-    color: #5d4037;
+    background-color: #e3f2fd;
+    color: #2c3e50;
 }
 
 .instructions {
